--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "install": "^0.13.0",
     "next": "13.0.6",
+    "npm": "^9.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
   }
 }
