--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
-    "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "install": "^0.13.0",
     "next": "13.0.6",
     "npm": "^9.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
+    "@types/react-icons": "^3.0.0",
+    "eslint": "^8.29.0"
   }
 }
