--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.2.0",
     "eslint-config-next": "13.0.6",
     "install": "^0.13.0",
     "next": "13.0.6",
     "npm": "^9.1.3",
+    "octokit": "^2.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
