--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "eslint-config-next": "13.0.6",
     "install": "^0.13.0",
+    "intersection-observer": "^0.12.2",
     "next": "^13.2.3",
     "next-auth": "^4.20.1",
     "npm": "^9.1.3",
